[package]
authors = ['MTDK1 <https://github.com/MTDK1>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://mtdk1.github.io/study_group/'
license = 'Unlicense'
name = 'ocw-demo'
repository = 'https://github.com/ibchain/test-pallet    '
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
parking_lot = '0.11'
parity-scale-codec = { version = '2.0', default-features = false, features = ['derive'] }
# https://github.com/serde-rs/json/pull/606
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }

# Substrate packages
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-arithmetic = { version = '3.0', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-io = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
sp-keystore = { version = '0.9', optional = true }

[features]
default = ['std']
std = [
 	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-keystore',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-arithmetic/std',
	'sp-keystore/std',
]
