[package]
authors = ['MTDK1 <https://github.com/MTDK1>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://mtdk1.github.io/study_group/'
license = 'Unlicense'
name = 'test-pallet'
repository = 'https://github.com/ibchain/test-pallet'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-assets = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    "sp-std/std",
    'frame-system/std',
    'pallet-assets/std',
    'sp-runtime/std',
    'pallet-timestamp/std',
]
